src/snapshots/afrotd__parser__tests__interpretation_html_7.1.5_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.5.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Vor dem Snap überquert ein Team B-Spieler die neutrale Zone, ohne
            einen Gegenspieler zu berühren, und bewegt sich hinter einem Team
            A-Lineman weiter auf den Quarterback oder den Kicker zu.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Ein Team B-Spieler, der sich auf Team A’s Seite der neutralen
                Zone befindet und sich ungehindert auf den Quarterback oder den
                Kicker zu bewegt, während er sich hinter einem Offense Lineman
                befindet, behindert Team A’s Spielvorbereitung. Strafe - Team
                B-Foul, Offside, Dead Ball. 5 Meter vom Succeeding Spot.
            </p>
        </details>
    </div>
</article>
