src/snapshots/afrotd__parser__tests__interpretation_html_7.1.5_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.5.V
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 2 von der B-45. Team A ist in Formation und der Snap steht
            unmittelbar bevor. QB A12 ist in einer Shotgun-Formation und nutzt
            ein Klatschen der Hände als Startsignal. Ein Team B (a)
            Teammitglied oder (b) ein Assistenz-Coach klatscht in die Hände und
            End A88 begeht einen Fehlstart oder der Snapper snappt den Ball.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. Spielverzögerung durch verwirrende Signale. S21
                in beiden Fällen. Durch die Strafe hat Team A einen 1. und 10
                von der B-40. Die Regel besagt, dass kein Spieler
                Defense-Signale benutzen darf, die den Klang oder den Charakter
                von Offense Startsignalen haben oder diese Signale in anderer
                Weise behindern oder stören. Der Sinn der Regel schließt
                Teammitglieder oder Coaches ein, die klatschen, wenn der Snap
                unmittelbar bevorsteht, um damit die Offense zu einem Fehlstart
                zu verleiten.
            </p>
        </details>
    </div>
</article>
