src/snapshots/afrotd__parser__tests__interpretation_html_7.1.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A83, ein berechtigter Receiver, ist der End an seiner Scrimmage
            Line und steht in der Nähe des Snappers in einer unausgeglichenen
            „T”- Formation. Quarterback A10 nimmt den ihm übergebenen Snap und
            gibt den Ball sofort weiter zu A83.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wenn die Bewegung des Balles vorwärts ist und der Ball A10’s
                Hand verlässt, bevor er von A83 berührt wird, ist es ein
                legaler Pass. A83 könnte sich zwar genügend umgedreht haben, um
                einen Rückpass oder einen Handoff (legal) entgegen zu nehmen;
                aber wenn diese Aktion unmittelbar nach dem Snap erfolgte, ist
                es unwahrscheinlich, dass für einen Handoff genug Zeit
                verblieb, damit die Voraussetzungen des „Umdrehens” und der
                „zwei Meter hinter der Scrimmage Line” zutreffen.
            </p>
        </details>
    </div>
</article>
