src/snapshots/afrotd__parser__tests__interpretation_html_7.2.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.2.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim zweiten Down fumbelt A1 den Ball, der auf den Boden prallt und
            hoch in die Luft zurückspringt. B2 erreicht den Ball, während er
            sich über dem Boden befindet und landet im Aus auf den Boden (a)
            jenseits des Fumble-Punktes oder (b) hinter dem Fumble-Punkt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Team A’s Ball am Fumble-Punkt, (b) Team A’s Ball an dem
                Punkt, an der Ball die Seitenlinie überquert (Regeln 4.2.4 und
                7.2.4).
            </p>
        </details>
    </div>
</article>
