src/snapshots/afrotd__parser__tests__interpretation_html_7.3.11_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.11.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach dem Zwei-Minuten-Timeout wirft Quarterback A10, der sich
            innerhalb der Tackle Box befindet, einen Verzweiflungspass, um
            einen Raumverlust zu verhindern. Der Pass wird unvollständig,
            nachdem er zuvor vom unberechtigten A58 berührt wurde, als dieser
            versuchte, den Pass zu fangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul wegen absichtlichem Wegwerfen des Balles. Keine illegale
                Berührung des Passes, da dieser illegal war. Strafe –
                Downverlust am Punkt des Passwurfes. Die Game Clock startet mit
                dem Snap (Regeln 3.3.2.d.4 und 7.3.2.h). Da sich das Foul nach
                dem Zwei-Minuten-Timeout ereignet, fällt es unter die
                10Sekunden-Abzugs-Regel 3.4.4. Falls die Spielzeit in dieser
                Spielperiode ausläuft, wird die Spielperiode nicht verlängert.
            </p>
        </details>
    </div>
</article>
