src/snapshots/afrotd__parser__tests__interpretation_html_7.3.12_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.12.I
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 15 von der A-15. A11 wirft einen Vorwärtspass zu A88.
            Während des Downs erhält B60 eine Flagge für einen anhaltenden
            Kontakt zum Kopf von Tackle A79. Der Pass auf A88 ist (a)
            vollständig an der A-20, und A88 advanct bis zu der A-30, wo er
            getackelt wird; (b) unvollständig oder abgefangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Die Strafe wird von der A-30 durchgeführt, A’s Ball, 1. und
                10 von der A-45. (b) Die Strafe wird vom Previous Spot
                durchgeführt, A’s Ball, 1. und 10 von der A-30 (Regel 9.1
                Strafe).
            </p>
        </details>
    </div>
</article>
