src/snapshots/afrotd__parser__tests__interpretation_html_7.3.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Quarterback A10, der sich innerhalb der Tackle Box befindet und
            versucht Raumverlust zu verhindern, wirft absichtlich einen
            Verzweiflungspass, der in einer Zone, in der kein berechtigter Team
            A-Spieler eine geeignete Möglichkeit zum Fangen des Vorwärtspasses
            hat, unvollständig wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler Vorwärtspass wegen absichtlichen Wegwerfens eines
                Vorwärtspasses. Strafe – Downverlust am Spot of Foul. Die Game
                Clock startet mit dem Snap (Regel 3.3.2.d.4), sofern nicht
                Regel 3.4.4 zutrifft.
            </p>
        </details>
    </div>
</article>
