src/snapshots/afrotd__parser__tests__interpretation_html_7.3.2_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.2.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Quarterback A11 geht zurück, um einen Vorwärtspass zu werfen. Er
            verlässt die Tackle Box. Er fumbelt den Ball, der direkt in seine
            Hände zurückspringt. A11 wirft dann den Ball vorwärts und dieser
            landet jenseits der neutralen Zone in einem offenen Bereich, in dem
            sich kein berechtigter Receiver befindet, der die Möglichkeit
            hätte, den Ball zu fangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel, da A11 den Ballbesitz nicht an einen anderen
                Spieler übertrug.
            </p>
        </details>
    </div>
</article>
